Se corrigen errore y se mejora performance